[project]
name = "airbnb-mcp-server"
version = "0.1.0"
description = "An MCP server for searching Airbnb listings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "mcp[cli]>=1.9.4",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "httpx>=0.27.0",  # Added for async HTTP requests
]